<resources>
    <string name="app_name">BitCoin Market</string>
    <string name="countries">Countries</string>
    <string name="what_is_bit_coin">What is Bit-Coin ?</string>
    <string name="one_bitcoin"> 1 Ƀ in USD ?</string>
    <string name="buy_rate">What is \nBuy rate and\nSale rate?</string>
    <string name="_4370_80">Value :\n4370.80 $</string>
    <string name="ans_buy_rate">Buy rate :\n4370.80 $</string>
    <string name="ans_sell_rate">Sale rate :\n4370.80 $</string>
    <string name="usd">USD</string>
    <string name="one_bitcoin_in">1 Ƀ in %s</string>
    <string name="calculator">calculator</string>
    <string name="bitcoin_market">BitCoin Market</string>


    <!-- AdMob ad unit IDs -->
    <!--<string name="banner_home_footer">ca-app-pub-0664573200302260/332653322424</string>-->
    <string name="interstitial_full_screen">ca-app-pub-3454303483023480/4738105142</string>


    <!-- Fonts -->
    <string name="PacificoRegular">PacificoRegular.ttf</string>
    <string name="ConcertOneRegular">ConcertOneRegular.ttf</string>
    <string name="DancingScriptBold">DancingScriptBold.ttf</string>
    <string name="BerkshireSwashRegular">BerkshireSwashRegular.ttf</string>
    <string name="ArchitectsDaughterRegular">ArchitectsDaughterRegular.ttf</string>
    <string name="FrijoleRegular">FrijoleRegular.ttf</string>
    <string name="YanoneKaffeesatzRegular">YanoneKaffeesatzRegular.ttf</string>
    <string name="DancingScriptRegular">DancingScriptRegular.ttf</string>
    <string name="IndieFlower">IndieFlower.ttf</string>
    <string name="BoogalooRegular">BoogalooRegular.ttf</string>
    <string name="BlackOpsOneRegular">BlackOpsOneRegular.ttf</string>
    <string name="ABeeZeeRegular">ABeeZeeRegular.ttf</string>
    <string name="connect_to_iternet">Please connect to internet</string>
</resources>
